--- a/style.css
+++ b/style.css
@@ -1,9 +1,24 @@
 h1{
     font-family: sans-serif;
     font-size: 5em;
-    background-color: aliceblue;
+    /*background-color: aliceblue;
+    */
     text-align: center;
 }
+
+.nav{
+    background-color: orange;
+    position: fixed;
+    top: 0px;
+    width: 100%;
+    height: 8%;
+    margin-top: 0px;
+    margin-right: 0px;
+    margin-left: 0px;
+
+}
+
+
 
 #profile_pic{
     display: block;
@@ -20,8 +35,34 @@ body{
     /*background-image: url("images/graphic_design_is_my_passion.png"); */
     color: black;
     font-size: 20px;
+    background-color: white;
+
 }
 
 div{
+    /*
     background-color: wheat;
+    */
 }
+
+
+ul.nav {
+    padding-left: 0px;
+    background-color: orange;
+    text-align: center;
+    
+  }
+  ul.nav > li {
+    display: inline-block;
+    padding: 1.5% 20px;
+    height: fit-content;
+
+  }
+  ul.nav > li:hover {
+    background-color: darkorange;
+  }
+  ul.nav > li > a {
+    color: white;
+    text-decoration: none;
+    font-size: 4vh;
+  }
