--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -16,7 +16,7 @@
                             <hr class="star-primary">
                             <img src="img/portfolio/{{ post.alt }}" class="img-responsive img-centered" alt="{{ post.img }}">
                             {% if post.link %}
-                            <iframe frameborder="0" src={{ post.icon }} width="552" height="167"><a href={{ post.link }}>{{ post.credits }}</a></iframe>
+                            <iframe frameborder="0" src="{{ post.icon }}"" width="552" height="167"><a href="{{ post.link }}">{{ post.credits }}</a></iframe>
                             {% endif %}
                             {% if post.description %}
                                 <p>{{ post.description }}</p>
