--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -25,7 +25,7 @@
                                 {% if post.client %}
                                     {% if post.clientLink %}
                                     <li>Made For:
-                                        <strong><a href="{{post.clientLink}}">{{ post.client }}</a>
+                                        <strong><a href="{{post.clientLink}}" target="_blank">{{ post.client }}</a>
                                         </strong>
                                     </li>
                                     {% else %}
