--- a/_includes/about.html
+++ b/_includes/about.html
@@ -15,7 +15,7 @@
                     <p>Please ignore this site until it is complete.</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="resume.pdf" class="btn btn-lg btn-outline">
+                    <a href="resume.pdf" class="btn btn-lg btn-outline" target="_blank">
                         <i class="fa fa-download"></i> Resume
                     </a>
                 </div>
