--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,10 +9,14 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>This site is under construction.</p>
+                    <p> 
+                        Hello! My name is Esteban, and I am a senior at UCI majoring in Computer Science. Over the past year I have found a passion in game development and have shifted my focus towards a career in games.
+                    </p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Please ignore this site until it is complete.</p>
+                    <p>
+                        Most of my work is a mix of mostly programming and producing when needed. 
+                    </p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="resume.pdf" class="btn btn-lg btn-outline" target="_blank">
