--- a/_includes/about.html
+++ b/_includes/about.html
@@ -20,7 +20,7 @@
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="resume.pdf" class="btn btn-lg btn-outline" target="_blank">
-                        <i class="fa fa-download"></i> Resume
+                        <i class="fa"></i> Resume
                     </a>
                 </div>
             </div>
