--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -16,7 +16,9 @@
                             <hr class="star-primary">
                             <img src="img/portfolio/{{ post.alt }}" class="img-responsive img-centered" alt="{{ post.img }}">
                             {% if post.link %}
-                                <button type="button" class="btn btn-default" href="{{post.link}}"><i class="fa"></i> Play on Itch.io</button>
+                            <a href="{{post.link}}" class="btn btn-lg btn-outline" target="_blank">
+                                <i class="fa fa-download"></i> Play on Itch.io
+                            </a>
                             {% endif %}
                             {% if post.description %}
                                 <p>{{ post.description }}</p>
