--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -16,7 +16,7 @@
                             <hr class="star-primary">
                             <img src="img/portfolio/{{ post.alt }}" class="img-responsive img-centered" alt="{{ post.img }}">
                             {% if post.link %}
-                                <button type="button" class="btn btn-default" href="{{post.link}}"><i class="fa"></i> Play on Itch.io</button>
+                            <button type="submit" class="btn btn-lg" href="{{post.link}}">Send</button>
                             {% endif %}
                             {% if post.description %}
                                 <p>{{ post.description }}</p>
