Revert "play button test 2"
This reverts commit 92aff039c4a72a603966ea41657994a8684b6b37.

--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -15,8 +15,8 @@
                             <h2>{{ post.title }}</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/{{ post.alt }}" class="img-responsive img-centered" alt="{{ post.img }}">
-                            {% if post.link %}
-                            <button type="submit" class="btn btn-lg" href="{{post.link}}">Send</button>
+                            {% if post.embed %}
+                            {{post.embed}}
                             {% endif %}
                             {% if post.description %}
                                 <p>{{ post.description }}</p>
