--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -2,7 +2,7 @@
  {% for post in site.posts %}
     <div class="portfolio-modal modal fade" id="portfolioModal-{{ post.modal-id }}" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
+            <div class="close-modal" data-dismiss="modal" style="background-color:hsla(9, 100%, 64%, 0.5)">
                 <div class="lr">
                     <div class="rl">
                     </div>
