--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -28,7 +28,7 @@
                         <a href="#contact">Contact</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="resume.pdf" target="_blank">Resume</a>
+                        <a href="Esteban_Aldana_Resume.pdf" target="_blank">Resume</a>
                     </li>
                 </ul>
             </div>
