--- a/_includes/about.html
+++ b/_includes/about.html
@@ -19,7 +19,7 @@
                     </p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="resume.pdf" class="btn btn-lg btn-outline" target="_blank">
+                    <a href="Esteban_Aldana_Resume.pdf" class="btn btn-lg btn-outline" target="_blank">
                         <i class="fa fa-download"></i> Resume
                     </a>
                 </div>
