--- a/_includes/about.html
+++ b/_includes/about.html
@@ -10,12 +10,12 @@
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
                     <p> 
-                        Hello! My name is Esteban, and I am a senior at UCI majoring in Computer Science. Over the past year I have found a passion in game development and have shifted my focus towards a career in games.
+                        Welcome to my corner of the internet! I’m a passionate and energetic game developer, fresh out of UC Irvine where I graduated in 2023. During my time there, I had the privilege of serving as the game production officer for our university's video game development club, honing my skills and leading exciting projects.
                     </p>
                 </div>
                 <div class="col-lg-4">
                     <p>
-                        Most of my work is a mix of mostly programming and producing when needed. 
+                        Currently, I’m diving into the chilling world of horror games with my latest project, Pemberton Shift. I’m eager to bring my creativity and technical expertise to new opportunities and collaborations. Let’s create something amazing together!
                     </p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
