--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -35,7 +35,7 @@
                                         </strong>
                                     </li>
                                     {% else %}
-                                    <li>Made For:
+                                    <li>Organization:
                                         <strong>{{ post.client }}
                                         </strong>
                                     </li>
@@ -48,7 +48,7 @@
                                 </li>
                                 {% endif %}
                                 {% if post.project-date %}
-                                    <li>Date:
+                                    <li>Development Period:
                                         <strong>{{ post.project-date }}
                                         </strong>
                                     </li>
