Revert "Updated Resume Link to download resume directly"
This reverts commit 5afb965b4128f34ff080a14900c1e642f3e610b4.

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -28,7 +28,7 @@
                         <a href="#contact">Contact</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="https://doc-0g-c4-docstext.googleusercontent.com/export/ts2sm8v47n0tv5pg3qm0lbb4bk/uiljk1ar962ne8fs8rko4f2qog/1729483900000/108038109584061555457/108038109584061555457/126Co1GA3mIycE8f2URm10aLknYEaaLHoevQ3pOJcuow?format=pdf&id=126Co1GA3mIycE8f2URm10aLknYEaaLHoevQ3pOJcuow&token=AC4w5VjIKQp6Yn_B17kkcUcprw0J7KFUiA:1729483899059&includes_info_params=true&cros_files=false&tab=t.0&inspectorResult=%7B%22pc%22:1,%22lplc%22:71%7D&dat=AOBvIb3uDGByyKGLo7DgR-ExDWsCDDAUQWGmSGMvpM4l_AWY8sHiXPHY2DAU-_9esS-W-OvhT8UeL3MRCjAVkfEwENKsRVgzF6XIdPjEB070PDMoaV9jisZNyzVyr2aS-iIEHMB9xUndj1rHr7YQEl3DM0YAoGbhRnIS-YAohxTs67xVr8CVPElV_LqvOHnPNnNEcVDaAV4Ie6Da3fdD38U5VSJbc9S13gD7WMRP_tCIo4SQFJzupYifIB5uQFw5VDXv7gSQd-KrGIlhHqRDOj2uhhNzr8ysX84jWoAkSQZx_LZ-ANc1NsJto-u2PNDn6seTei5meLt_paYiBFdzE5v5G1TeyXgewfLo5Ik3y-uNUnMieYoRby-8BlI7Ojj9Pn5qFykU9U3Ug0d_iaV0TpyBXi_PhQUjAyZN9ovUvft-p4FLTZqz-_z6HeHWKExhYVGQtDH_x-1J0n-9deBZd_lKmwvKSDkuNZqi4XAlhBUi-8J1S0br-1y86FCAdzVX4q8ZTk44YOiZIdZuEwtXkdgBYd5L4YvW6rqTnLv3Lq0L6EYK0K7_89aWqYI5DpMj1hhkDCPfQIXVQotgNzRhUHML_NcWRKMPV7KSaYkJwcinzzzvtcti8zGFeBmoKNMGTnWEMrs86-KODEIAI8gMyo-4WdzX--GluXT80YxdHAAoJtz5K9IU0YW4ENT2IePfM3SnxVRqPOTLnh49H6D_F_uCk0-xu8InF_Lp3mdy472fh-WjVmAJuYMe3DjYQjGUYaWogEslKRvt-SPZvEcGw3ow12oJoWX4OzGdhTFOnAYkfe2ax_EguaMMsKPenpcbO9j2ttwy3imZIriHhPOo9HMevDIyu9Z82s3T7xywSiAVTQtmOZOuE3js-7uNQzq7nRQh4qRhEoqyUBrRfaoixJgJhbcsgqnaffK3FDpHk5XbMlLISq5YBvByfppv" target="_blank">Resume</a>
+                        <a href="Esteban_Aldana_Resume.pdf" target="_blank">Resume</a>
                     </li>
                 </ul>
             </div>
